fixed logo on mobile

--- a/static/sass/base.scss
+++ b/static/sass/base.scss
@@ -153,6 +153,10 @@ h2 {
         padding: 0 20px 0 20px;
     }
 
+    img.of-logo {
+        width: 275px;
+    }
+
     .tools {
         padding: 0px 0px 0px 20px;
     }
